# ecs-platformer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
resources/shaders/: default_sprite_shader.shader
resources/textures/: door.pixil  grass.pixil  ground.pixil  ground_grass.pixil  player.pixil  spike.pixil
src/: Application.cpp  Application.h  CMakeLists.txt  Main.cpp
src/Application/: AppParams.cpp  AppParams.h  Application.cpp  Application.h  CMakeLists.txt
src/Assets/: AssetsCache.cpp  AssetsCache.h  AssetsManager.cpp  AssetsManager.h  CMakeLists.txt  GroupedAssetsParser.cpp  GroupedAssetsParser.h  OpenGlShaderLoader.cpp  OpenGlShaderLoader.h  OpenGlTextureLoader.cpp  OpenGlTextureLoader.h  Sprite.cpp  Sprite.h  Texture.cpp  Texture.h  TextureLoader.cpp  TextureLoader.h
src/Components/: CMakeLists.txt  CameraComponent.h  DangerComponent.h  DoorComponent.h  PathComponent.h  PhysicsBodyComponent.h  PhysicsComponent.h  PlayerComponent.h  SpriteComponent.h  TransformComponent.h
src/Container/: CMakeLists.txt  DependencyContainer.h
src/Input/: CMakeLists.txt  InputManager.cpp  InputManager.h  KeyCode.h
src/Math/: CMakeLists.txt  Transform.cpp  Transform.h
src/Physics/: Body.cpp  Body.h  CMakeLists.txt  World.cpp  World.h
src/Render/: CMakeLists.txt  IShader.h  OpenGlShader.cpp  OpenGlShader.h  Renderer.cpp  Renderer.h  SpriteRenderer.cpp  SpriteRenderer.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
src/Scene/: CMakeLists.txt  Entity.cpp  Entity.h  EventListener.h  IComponent.h  ISystem.h  Scene.cpp  Scene.h  SceneFactory.h  SceneManager.cpp  SceneManager.h  SystemPriorities.h
src/Scene/Events/: CMakeLists.txt  CollisionEnter.cpp  CollisionEnter.h  CollisionExit.cpp  CollisionExit.h  EventVariant.h
src/Scene/SceneFactories/: CMakeLists.txt  FirstLevel.cpp  FirstLevel.h  SecondLevel.cpp  SecondLevel.h  TestScene.cpp  TestScene.h  TestScene2.cpp  TestScene2.h
src/Systems/: CMakeLists.txt  CameraSystem.cpp  CameraSystem.h  PathMovingSystem.cpp  PathMovingSystem.h  PhysicsSystem.cpp  PhysicsSystem.h  PlayerSystem.cpp  PlayerSystem.h  SinMoveSystem.cpp  SinMoveSystem.h  SpriteRenderSystem.cpp  SpriteRenderSystem.h  TestSystem.cpp  TestSystem.h
src/Time/: CMakeLists.txt  DeltaTime.cpp  DeltaTime.h
src/Utils/: CMakeLists.txt  Singleton.h
src/Window/: CMakeLists.txt  Window.cpp  Window.h
